Crud MVC and Security completed

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 		    <version>6.3.0</version>
 		</dependency>
 
-<!--
+		<!-- Security -->
 		<dependency>
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-security</artifactId>
@@ -80,9 +80,7 @@
 		<dependency>
 		    <groupId>org.thymeleaf.extras</groupId>
 		    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
-		    
 		</dependency>
--->
 	</dependencies>
 
 	<build>
