--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password= root
 # ma non il file data.sql con le istruzione sql per popolarle
 spring.jpa.hibernate.ddl-auto = update
 
-# Necessario per eseguire data.sql dopo schema.sql
+# Necessario per eseguire resources/data.sql dopo schema.sql
 #spring.sql.init.mode=always
 
 #spring.sql.init.data-locations=import_data_*.sql
@@ -25,7 +25,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate=trace
 
 # aggiunge in console i messaggi di DEBUG oltre agli INFO, ERROR e WARNING
-#logging.level.web=debug
+logging.level.web=debug
 
 #richiesto per evitare warnings sulla versione Spring Boot 3.0.x
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=UNSPECIFIED
@@ -39,3 +39,9 @@ spring.jpa.open-in-view=false
 
 # Risolve i problemi di caricamento dei model
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+#spring.thymeleaf.check-template-location=false
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
