--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 		    <version>6.3.0</version>
 		</dependency>
 
-		<!-- Security 
+		<!-- Security -->
 		<dependency>
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-security</artifactId>
@@ -81,7 +81,7 @@
 		    <groupId>org.thymeleaf.extras</groupId>
 		    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
-		-->
+		
 	</dependencies>
 
 	<build>
