--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
 		    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
 		
+		<!-- Enabled rest controller to respond with a xml data type 
+		https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
