--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url = jdbc:mysql://localhost:3306/fotoalbum
 spring.datasource.username = root
 spring.datasource.password= root
 
+# Set server port
+#server.port=8081
+
 # Con CREATE e CREATE-DROP verrà eseguito schema.sql per la creazione delle tabelle
 # ma non il file data.sql con le istruzione sql per popolarle
 spring.jpa.hibernate.ddl-auto = update
@@ -33,15 +36,7 @@ spring.jpa.properties.jakarta.persistence.sharedCache.mode=UNSPECIFIED
 # Evita alcuni Warning
 spring.jpa.open-in-view=false
 
-#spring.mvc.format.date=yyyy-MM-dd
-#spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
-#spring.mvc.format.time=HH:mm:ss
-
 # Risolve i problemi di caricamento dei model
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-
-#spring.thymeleaf.check-template-location=false
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
